rules.v4
# Generated by iptables-save v1.6.0 on Thu Oct  4 08:41:03 2018
*nat
:PREROUTING ACCEPT [1:73]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [16:1116]
:POSTROUTING ACCEPT [1:84]
-A PREROUTING -i eth0 -p udp -m udp --dport 53 -j REDIRECT --to-ports 5353
-A PREROUTING -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j REDIRECT --to-ports 9040
COMMIT
# Completed on Thu Oct  4 08:41:03 2018
# Generated by iptables-save v1.6.0 on Thu Oct  4 08:41:03 2018
*filter
:INPUT DROP [1:73]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [15:1032]
-A INPUT -s 127.0.0.1/32 -j ACCEPT
-A INPUT -i tun0 -j ACCEPT
-A INPUT -s 192.168.40.0/24 -j ACCEPT
-A INPUT -s 255.255.255.255/32 -i wlan0 -j ACCEPT
-A INPUT -s 192.168.8.255/32 -i wlan0 -j ACCEPT
-A OUTPUT -d 127.0.0.1/32 -j ACCEPT
-A OUTPUT -o tun0 -j ACCEPT
-A OUTPUT -d 192.168.40.0/24 -j ACCEPT
-A OUTPUT -d 255.255.255.255/32 -o wlan0 -j ACCEPT
COMMIT
# Completed on Thu Oct  4 08:41:03 2018
